--- a/influlab/styles/index.css
+++ b/influlab/styles/index.css
@@ -123,6 +123,7 @@ p {
 .sub-words {
     padding-top: 32px;
     padding: 16px;
+    margin-bottom: 10px;
 }
 .sub-words h1 {
     margin-top: 20px !important;
